src/styles/header.css
/* =============================== Header ================================= */
.header {
	display: flex;
	flex-direction: row; 
	align-items: flex-end; 
 	width: 100%;
  height: 80px;
	z-index: 2;  
	position: absolute; 
	min-width: 1265px;  
}

.options-bar {
	position: absolute;
  z-index: -2;
  height: 36px;
  top: 0;
  width: 100%;  
}

/* =============================== Nav links ============================== */
.nav-link {
	white-space: nowrap;
}

.nav-link:hover {
	cursor: pointer;
}

/* =============================== Header Left ============================ */
/* 
	If want to change width of header left 
		=> must also change width of main-view-left 
		=> must adjust min-width of both
		=> check at all widths
*/
.header-left {
	display: flex;
	justify-content: space-between;
	align-items: flex-end;  
	min-width: 484px;
	width: 39%;
	padding-left: 6%;
	padding-right: 3%;
	height: 100%;
	position: absolute;
}

/* ======== Home */
.home-container {
	display: flex;
  align-items: center;
}

.home-container:hover {
	cursor: pointer;
}

.home-icon {
	margin-right: 10px;
}

/* =============================== Header Right ============================ */
.header-right {   
	height: 100%;
	flex-grow: 1;
	display: flex;
	justify-content: flex-end; 
}  

.header-right-content-container {
	height: 100%;
	display: inline-flex;
	flex-direction: column; 
  margin-right: 17%;
}

.options-container { 
	display: flex;
	justify-content: flex-end;
	align-items: center;
	height: 36px;
	padding-right: 3%;
}

.option {
	display: flex;
	align-items: center;
	margin-left: 5.125rem;
}

.options-heading:hover {
	cursor: pointer; 
}

/* ======== Nav Right */
.nav-right-container {
  display: flex;
  align-items: flex-end;
  padding-right: 3%;
}
 
.nav-right { 
	display: flex;
}

.nav-right ul {
	display: flex;
	flex-direction: row;
}
 
.nav-link-right {
	margin-left: 72px;
} 

.chevron-icon {
	margin-left: 4.18px;
}

@media screen and (min-width: 1800px) {
	.options-container {  
		padding-right: 9%;
	}

	.nav-right-container {
    padding-right: 9%;
	}
}

